objects/X7S_Events_Setting__mdt/X7S_Events_Setting__mdt.object-meta.xml
<CustomObject>
    <description>7Summits Events settings</description>
    <label>7S Event Setting</label>
    <pluralLabel>7S Event Settings</pluralLabel>
</CustomObject>