objects/X7S_Events_Setting__mdt/fields/Default_Test_Profile__c.field-meta.xml
<CustomField>
    <fullName>Default_Test_Profile__c</fullName>
    <label>Default Test Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>