objects/X7S_Events_Setting__mdt/fields/Enable_Audience_Targeting__c.field-meta.xml
<CustomField>
    <fullName>Enable_Audience_Targeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable audience targeting on create and list view.</inlineHelpText>
    <label>Enable Audience Targeting</label>
    <type>Checkbox</type>
</CustomField>