objects/X7S_Events_Setting__mdt/fields/Enable_Multi_Language__c.field-meta.xml
<CustomField>
    <fullName>Enable_Multi_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Multi Language for view the event as per user language stored in user record</description>
    <label>Enable Multi Language</label>
    <type>Checkbox</type>
</CustomField>