objects/X7S_Events_Setting__mdt/fields/Notify_Organizer_of_New_Posts_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Notify_Organizer_of_New_Posts_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notify the event organizer (as set on the 7S Event record) via Chatter if anyone posts to the 7S Event Chatter feed.</description>
    <inlineHelpText>Automatically mention event organizer in chatter posts for their event.</inlineHelpText>
    <label>Notify Organizer of New Posts</label>
    <type>Checkbox</type>
</CustomField>