objects/X7S_Events_Setting__mdt/fields/PermissionSetName__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetName__c</fullName>
    <description>Permission set name to authorize a user to post new event to all</description>
    <inlineHelpText>Permission set name to authorize a user to post new event to all</inlineHelpText>
    <label>Permission Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>