objects/X7S_Events_Setting__mdt/fields/Post_to_General_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Post_to_General_Permission_Set__c</fullName>
    <label>Post to General Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>