objects/X7S_Events_Setting__mdt/fields/Require_Group_Membership__c.field-meta.xml
<CustomField>
    <fullName>Require_Group_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Require group membership for all group-related Event items</description>
    <inlineHelpText>When creating or editing an event, a group must be selected. Posting without group assignment (general) can be enabled by assigning the 7S Event Post to General custom permission or the Post to General Permission Set name specified in CMT.</inlineHelpText>
    <label>Require Group Membership</label>
    <type>Checkbox</type>
</CustomField>