objects/X7S_Events_Setting__mdt/fields/Show_Notification_Label__c.field-meta.xml
<CustomField>
    <fullName>Show_Notification_Label__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Show event organizer’s label (x7sEventsMentionText) when they are mentioned in a chatter post.</inlineHelpText>
    <label>Show Notification Label</label>
    <type>Checkbox</type>
</CustomField>