objects/X7S_Events_Setting__mdt/fields/Topic_Limit__c.field-meta.xml
<CustomField>
    <fullName>Topic_Limit__c</fullName>
    <inlineHelpText>Maximum number of topic evaluated for assigned Events. A small number (1,000 or less) may not identify all topics. A very large number (&gt; 10,000) will affect performance. Max value is 50,000.</inlineHelpText>
    <label>Topic Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>