objects/X7S_Events_Setting__mdt/fields/View_All_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>View_All_Permission_Set__c</fullName>
    <inlineHelpText>Permission set API Name that will grant access to all items for any audience.</inlineHelpText>
    <label>View All Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>