objects/X7S_Events_Setting__mdt/fields/X7S_Event_Default_Custom_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>X7S_Event_Default_Custom_Field_Set__c</fullName>
    <inlineHelpText>The custom field set specified here will be the default custom field set for 7S Events, unless changed in the builder properties of the component</inlineHelpText>
    <label>7S Event Default Custom Field Set</label>
    <referenceTo>X7S_Shr_Custom_Field_Set__mdt</referenceTo>
    <relationshipLabel>7S Event Settings</relationshipLabel>
    <relationshipName>X7S_Event_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>