objects/X7S_Events_Setting__mdt/validationRules/x7s_Active_Custom_Field_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>x7s_Active_Custom_Field_Set</fullName>
    <active>true</active>
    <description>This validation rule will prevent selecting the inactive custom field set.</description>
    <errorConditionFormula>X7S_Event_Custom_Field_Set__r.Active__c = false</errorConditionFormula>
    <errorDisplayField>X7S_Event_Custom_Field_Set__c</errorDisplayField>
    <errorMessage>Please Select the active field set</errorMessage>
</ValidationRule>